Alert apos gerar linha digitavel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <section>
@@ -15,11 +15,16 @@
         <span class="navbar-brand mb-0 h1">Linha Digitavel</span>
     </nav>
 </section>
+<div class="alerta col-md-3 offset-md-9 mt-2">
+    <div class="alert alert-success" role="alert">
+        A linha digitavel foi gerada.
+    </div>
+</div>
 <div class="container">
     <div class="wrapper">
         <div class="row">
             <div class="col col-sm-10">
-                <div class="mt-5">
+                <div class="">
                     <input type="text" class="form-control" id="valor" placeholder="Valor"  maxlength="9" required>
                 </div>
             </div>
@@ -49,10 +54,10 @@
         </div>
     </div>
 </div>
-<script src="clipboard.min.js"></script>
-<script src="jquery-3.3.1.min.js"></script>
-<script src="jquery.mask.js"></script>
-<script src="index.js"></script>
+<script src="js/clipboard.min.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery.mask.js"></script>
+<script src="js/index.js"></script>
 
 
 </body>
