--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
+    <link rel="stylesheet" href="css/frame-table/demo.css">
+    <link rel="stylesheet" href="css/frame-table/material-dashboard.css">
+    <link rel="stylesheet" href="css/frame-table/material-dashboard-rtl.css">
 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <section>
     <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Linha Digitavel</span>
+        <span class="navbar-brand mb-0 h1"><a href="index.html"><i class="fas fa-barcode"></i>Linha Digitavel</a></span>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link tipo-compromisso" href="tipocompromissoservico.html">Configurar tipos Compromisso</a>
+            </li>
+        </ul>
     </nav>
 </section>
 <div class="alerta col-md-3 offset-md-9 mt-2">
