--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </ul>
     </nav>
 </section>
-<div class="alerta col-md-3 offset-md-9 mt-2">
-    <div class="alert alert-success" role="alert">
-        A linha digitavel foi gerada.
+
+<section class="container conteudo-principal">
+    <div class="alerta col-md-3 offset-md-9 mt-2">
+        <div class="alert alert-success" role="alert">
+            A linha digitavel foi gerada.
+        </div>
     </div>
-</div>
-<div class="container">
-    <div class="wrapper">
         <div class="row">
             <div class="col col-sm-10">
                 <div class="">
@@ -61,8 +61,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+</section>
 <script src="js/clipboard.min.js"></script>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery.mask.js"></script>
