pop up consertado

--- a/index.html
+++ b/index.html
@@ -15,22 +15,28 @@
 </head>
 <body>
 <section>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1"><a href="index.html"><i class="fas fa-barcode"></i>Linha Digitavel</a></span>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link tipo-compromisso" href="tipocompromissoservico.html">Configurar tipos Compromisso</a>
-            </li>
-        </ul>
-    </nav>
-</section>
+    <header>
+        <nav class="navbar navbar-light bg-light">
+            <span class="navbar-brand mb-0 h1"><a href="index.html"><i class="fas fa-barcode"></i>Linha Digitavel</a></span>
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link tipo-compromisso" href="tipocompromissoservico.html">Configurar tipos Compromisso</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-<section class="container conteudo-principal">
-    <div class="alerta col-md-3 offset-md-9 mt-2">
+    <div class="alerta col-md-3 offset-9 mt-2">
         <div class="alert alert-success" role="alert">
             A linha digitavel foi gerada.
         </div>
     </div>
+</section>
+
+<section class="container conteudo-principal">
+
+
+
         <div class="row">
             <div class="col col-sm-10">
                 <div class="">
