adição do linha digitavel do boleto

--- a/tipocompromissoservico.html
+++ b/tipocompromissoservico.html
@@ -18,16 +18,15 @@
         <span class="navbar-brand mb-0 h1"><a href="index.html"><i class="fas fa-barcode"></i>Linha Digitavel</a></span>
         <ul class="nav justify-content-end">
             <li class="nav-item">
+                <a class="nav-link tipo-compromisso" href="http://www.barcodenet.com.br/cgi-bin/webcex1p.asp" target="_blank">Linha Digitavel Boleto</a>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link tipo-compromisso" href="">Configurar tipos Compromisso</a>
             </li>
         </ul>
     </nav>
 </section>
-<div class="alerta col-md-3 offset-md-9 mt-2">
-    <div class="alert alert-success" role="alert">
-        A linha digitavel foi gerada.
-    </div>
-</div>
 <div class="container">
     <div class="content">
         <div class="container-fluid">
