--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             <span class="navbar-brand mb-0 h1"><a href="index.html"><i class="fas fa-barcode"></i>Linha Digitavel</a></span>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link tipo-compromisso" href="tipocompromissoservico.html">Configurar tipos Compromisso</a>
+                    <a class="nav-link tipo-compromisso" href="http://www.barcodenet.com.br/cgi-bin/webcex1p.asp" target="_blank">Linha Digitavel Boleto</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link tipo-compromisso" href="tipocompromissoservico.html">Configurar Tipos Compromisso</a>
                 </li>
             </ul>
         </nav>
